add adversarial challenge; update copilot sdk; docs;

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ ANALYSIS_COUNT=2
 # Agent files
 AGENT_FILE=src/secret_validator_grunt/agents/secret_validator.agent.md
 JUDGE_AGENT_FILE=src/secret_validator_grunt/agents/judge.agent.md
+CHALLENGER_AGENT_FILE=src/secret_validator_grunt/agents/challenger.agent.md
 REPORT_TEMPLATE_FILE=src/secret_validator_grunt/templates/report.md
 
 # Polling interval in seconds
@@ -21,13 +22,19 @@ OUTPUT_DIR=analysis
 # Logging level (debug/info/warning/error)
 LOG_LEVEL=info
 
-# Skill directories (comma-separated paths)
-SKILL_DIRECTORIES=src/secret_validator_grunt/skills
+# Skill directories
+# ANALYSIS_SKILL_DIRECTORIES=path/to/custom/analysis/skills
+# CHALLENGER_SKILL_DIRECTORIES=path/to/custom/challenger/skills
+# SKILL_DIRECTORIES=...  # Deprecated alias for ANALYSIS_SKILL_DIRECTORIES
 DISABLED_SKILLS=skill2
 
 # Max analysis timeouts (seconds)
 ANALYSIS_TIMEOUT_SECONDS=1800
 JUDGE_TIMEOUT_SECONDS=300
+CHALLENGER_TIMEOUT_SECONDS=300
+
+# Enable adversarial challenger stage
+# CHALLENGE_ENABLED=false
 
 # Show token usage
 SHOW_USAGE=false
