feat: separate github api and copilot token

--- a/.env.example
+++ b/.env.example
@@ -33,12 +33,17 @@ ANALYSIS_TIMEOUT_SECONDS=1800
 JUDGE_TIMEOUT_SECONDS=300
 CHALLENGER_TIMEOUT_SECONDS=300
 
-# Enable adversarial challenger stage
+# Adversarial challenger stage (default enabled)
 # CHALLENGE_ENABLED=false
 
 # Show token usage
 SHOW_USAGE=false
 
-# GitHub to be used for Coplit CLI native connection mode and GitHub API calls in tools
+# GitHub token for secret scanning API calls and git clone auth
 GITHUB_TOKEN=ghp_...
+
+# Copilot CLI authentication token (optional).
+# If set, used exclusively for Copilot CLI auth.
+# If unset, falls back to GITHUB_TOKEN for Copilot CLI auth.
+# COPILOT_TOKEN=gho_...
 
